<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/description_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/margin_xx_small"
    android:paddingLeft="@dimen/margin_xx_small"
    android:paddingRight="@dimen/margin_xx_small"
    android:paddingStart="@dimen/margin_xx_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/description_header"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            tools:text="@string/test_header" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            style="@style/BaseTextStyle"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_height="wrap_content"
            tools:text="@string/test_text" />

        <com.example.translatorapp.view.image.EquilateralImageView
            android:id="@+id/word_image"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_no_photo_vector"
            android:visibility="visible"
            tools:visibility="visible"
            android:contentDescription="@string/image_stub" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>